--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -2,6 +2,7 @@
 <html lang="{{ site.lang | default: "en-US" }}" class="h-100">
 
 <head>
+    {% include google-analytics.html %}
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
