Enlarge container max widths for sm and md view

--- a/_scss/_variables.scss
+++ b/_scss/_variables.scss
@@ -28,3 +28,10 @@ $primary:       darken($color4, 12%);
 
 // .bg-light
 $gray-500:      $color1;
+
+$container-max-widths: (
+  sm: 960px,
+  md: 960px,
+  lg: 960px,
+  xl: 1140px
+)
