Update footer linkedin link

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -8,7 +8,7 @@
             <a href="https://www.facebook.com/btbatw/" target="_blank" rel="noopener noreferrer" class="px-1">
                 <i class="fab fa-facebook-square"></i>
             </a>
-            <a href="https://www.linkedin.com/groups/7488573/" target="_blank" rel="noopener noreferrer" class="px-1">
+            <a href="https://www.linkedin.com/company/btbatw" target="_blank" rel="noopener noreferrer" class="px-1">
                 <i class="fab fa-linkedin"></i>
             </a>
             <!-- <i class="fab fa--square"></i> -->
